[tool.poetry]
name = "greenmountainpower"
version = "0.0.3"
description = ""
authors = ["Kodey Converse <kodey@conve.rs>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2"
requests-oauthlib = "^1"
oauthlib = "^3"

[tool.poetry.group.dev.dependencies]
coverage = "^7.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
