[tool.poetry]
name = "greenmountainpower"
version = "0.0.4"
description = "This is an unofficial Python client that uses the undocumented API for Green Mountain Power accounts."
authors = ["Kodey Converse <kodey@conve.rs>", "Stan Brinkerhoff <stan@vtwireless.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/sbrinkerhoff/greenmountainpower/"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2"
requests-oauthlib = "^1"
oauthlib = "^3"

[tool.poetry.group.dev.dependencies]
coverage = "^7.0.2"
black = "^22"
pytest = "^7.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
