[tool.poetry]
name = "greenmountainpower"
version = "0.0.5"
description = "This is an unofficial Python client that uses the undocumented API for Green Mountain Power accounts."
authors = ["Kodey Converse <kodey@conve.rs>", "Stan Brinkerhoff <stan@vtwireless.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/sbrinkerhoff/greenmountainpower/"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2"
requests-oauthlib = "^1"
oauthlib = "^3"

[tool.poetry.dev-dependencies]
coverage = "^7"
black = "^22"
pytest = "^7"
isort = "^5"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

